--- a/Client/src/pages/Home/home.module.css
+++ b/Client/src/pages/Home/home.module.css
@@ -1,4 +1,34 @@
-@import url("https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap");
+.header {
+  position: absolute;
+  top: 1rem;
+  right: 1rem;
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+}
+
+.authButton {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  background-color: rgb(0, 0, 0);
+  color: white;
+  border: none;
+  border-radius: 5px;
+  padding: 0.5rem 1.8rem;
+  cursor: pointer;
+  font-size: 1.2rem;
+  font-family: "Bebas Neue", sans-serif;
+  transition: transform 0.3s ease;
+}
+
+.authButton:hover {
+  color: white;
+  background-color: rgb(0, 31, 117);
+  box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
+  transform: scale(1.05);
+}
 
 .contain {
   width: 100%;
