--- a/Client/src/components/berenjena/timmerComponent/timmerComponent.module.css
+++ b/Client/src/components/berenjena/timmerComponent/timmerComponent.module.css
@@ -24,3 +24,18 @@
 .timer {
     color: #ff914d;
 }
+
+
+
+.playerImage {
+  width: 50px;
+  height: 50px;
+  border: 2px solid;
+  border-radius: 50%;
+  margin: 0 10px;
+  transition: border-color 0.3s;
+}
+
+.playerImage.ready {
+  border-color: #ff904f;
+}
