--- a/Client/src/components/berenjena/jugadores/jugadores.module.css
+++ b/Client/src/components/berenjena/jugadores/jugadores.module.css
@@ -1,17 +1,92 @@
-.divJugador{
+.jugadorContainer {
   border-radius: 10px;
   color: white;
   margin: 1rem;
   display: flex;
+  flex-direction: column;
   align-items: center;
 }
 
-.avatar{}
-.cards img{
+.divJugador {
+  width: 100px;
+  height: 100px;
+  position: relative;
+  transition: border-color 0.1s linear;
+}
+
+.infoPlayer {
+  color: white;
+}
+
+.avatar {
+  position: relative;
+}
+
+.avatar img {
+  margin-right: 10px;
+}
+
+.cards img {
   width: 50px;
   height: 50px;
 }
 
+.connectionIcon {
+  font-size: 20px;
+  margin-left: 10px;
+}
+
+.obligatedIcon {
+  color: gold;
+  font-size: 20px;
+  position: absolute;
+  top: 0;
+  right: 0;
+}
+
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 2;
+  backdrop-filter: blur(10px);
+}
+
+.disconnectedContainer {
+  color: white;
+  text-align: center;
+}
+
+.disconnectedText {
+  font-size: 1.2rem;
+  margin-bottom: 0.5rem;
+}
+
+.timmer {
+  font-size: 1rem;
+}
+
+.progressBar {
+  width: 100%;
+  height: 10px;
+  background-color: #ddd;
+  border-radius: 5px;
+  overflow: hidden;
+  margin-top: 10px;
+  position: relative;
+}
+
+.progress {
+  height: 100%;
+  transition: width 0.5s linear, background-color 0.5s linear;
+  background-color: #4CAF50;
+}
 
 /* CARD 1 */
 .AcomodarCard1 {
@@ -20,7 +95,6 @@
   text-align: center;
   z-index: 1;
 }
-/* CARD 1 */
 
 /* CARD 2 */
 .AcomodarCard2 {
@@ -33,16 +107,19 @@
   color: white;
   border-radius: 10px;
 }
+
 .divCard2 {
   color: black;
   display: flex;
   flex-direction: column;
   gap: 10px;
 }
+
 .card2 {
   z-index: 1;
   transition: 0.3s;
 }
+
 .cardApost2 {
   position: absolute;
   display: flex;
@@ -53,7 +130,6 @@
   bottom: 40%;
   width: 100%;
 }
-/* CARD 2 */
 
 /* CARD 3 */
 .AcomodarCard3 {
@@ -71,6 +147,7 @@
   justify-content: center;
   gap: 15px;
 }
+
 .cardApost3 {
   position: absolute;
   color: black;
@@ -79,7 +156,6 @@
   flex-direction: row;
   right: 50%;
 }
-/* CARD 3 */
 
 /* CARD 4 */
 .AcomodarCard4 {
@@ -89,27 +165,26 @@
   text-align: center;
   align-items: center;
   height: auto;
- 
   border-radius: 10px;
   color: white;
 }
+
 .divCard4 {
   color: black;
   display: flex;
   flex-direction: column;
 }
+
 .card4 {
   color: black;
   z-index: 1;
   transition: 0.3s;
 }
+
 .cardApost4 {
   position: absolute;
   color: black;
   right: 130%;
   bottom: 40%;
   border-radius: 12px;
-  /* border:3px solid orange */
 }
-
-/* CARD 4 */
