--- a/Client/src/components/berenjena/winnerComponent/winnerComponent.module.css
+++ b/Client/src/components/berenjena/winnerComponent/winnerComponent.module.css
@@ -12,3 +12,25 @@
     flex-direction: column;
     overflow: hidden;
   }
+
+  .BoxWinner{
+    background-color:#ff914d;
+    border-radius: 5px;
+    padding: 10px 20px;
+    color: #fff;
+    width: 20%;
+    font-size: 2rem;
+  }
+  .BoxWinner h2{
+    color: black;
+  }
+
+  .message {
+    font-size: 1.8rem;
+    font-weight: bold;
+    color: #333;
+    background: #fff;
+    padding: 10px 20px;
+    border-radius: 5px;
+    box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
+  }
