--- a/Client/src/pages/BerenjenaGame/joinRoom/joinRoom.module.css
+++ b/Client/src/pages/BerenjenaGame/joinRoom/joinRoom.module.css
@@ -33,6 +33,12 @@
   font-size: 2rem;
 }
 
+.levelMap {
+  margin-top: 1rem;
+}
+.levelMap p {
+  margin: 0;
+}
 @media (max-width: 815px) {
   .containRoom {
     flex-direction: column;
@@ -388,17 +394,17 @@
 }
 
 .inputPlaceholder::placeholder {
-  color: rgb(167, 167, 167); 
+  color: rgb(167, 167, 167);
   font-style: italic;
 }
 
-.errorMsgContainer{
+.errorMsgContainer {
   display: flex;
   flex-wrap: wrap;
   width: 8rem;
 }
 
-.errorMsg{
+.errorMsg {
   display: flex;
   flex-wrap: wrap;
   margin: 0;
@@ -517,8 +523,6 @@
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
 
-
-
 .textRoom {
   display: flex;
   flex-direction: row;
@@ -529,8 +533,6 @@
   font-family: "Reddit Sans";
   font-size: 1rem;
 }
-
-
 
 .groupIcon {
   display: flex;
@@ -566,7 +568,6 @@
   background-color: rgb(0, 32, 100);
   box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
 }
-
 
 @media (max-width: 455px) {
   .DivRoom {
