--- a/Client/src/components/berenjena/loader/loader.module.css
+++ b/Client/src/components/berenjena/loader/loader.module.css
@@ -302,6 +302,8 @@
   display: flex;
   width: 100%;
   justify-content: center;
+  flex-wrap: wrap;
+  gap: 30px;
 }
 
 .playersAndButton {
@@ -337,14 +339,18 @@
 }
 
 .playerImage {
-  width: 50px;
-  height: 50px;
+  width: 60px;
+  height: 60px;
   border: 2px solid;
   border-radius: 50%;
-  margin: 0 10px;
+  /* margin: 0 10px; */
   transition: border-color 0.3s;
 }
 
 .playerImage.ready {
   border-color: #ff904f;
+}
+@media (max-width: 768px) {
+
+
 }
