--- a/Client/src/components/horseRace/horseContain/horseContain.module.css
+++ b/Client/src/components/horseRace/horseContain/horseContain.module.css
@@ -1,45 +1,43 @@
 .Contain {
   display: flex;
+  flex-direction: row;
   position: absolute;
+  justify-content: center;
   width: 100%;
-  height: 100vh;
-}
-.cardsContain {
-  display: flex;
-  position: absolute;
-  /* height: 100vh; */
-  width: 100%;
-  padding-top: 1rem;
-  
+  height: 80vh;
+  top: 0;
+  column-gap: 4rem;
+  margin-top: 1rem;
 }
 
 .cards {
-  left: 30%;
-  position: absolute;
-  border-radius: 12px;
-  padding: 0.5rem;
+  position: relative;
+  height: fit-content;
+  border: 3px solid darkgoldenrod;
+  border-radius: 13px;
 }
 
 /* Clases para diferentes posiciones en el eje Y */
 .yPos1 {
-  transform: translateY(0rem);
+  top: 0%;
 }
 
 .yPos2 {
-  transform: translateY(10rem);
+  top: 20%;
 }
 
 .yPos3 {
-  transform: translateY(20rem);
+  top: 40%;
 }
 
 .yPos4 {
-  transform: translateY(30rem);
+  top: 60%;
 }
 
 .yPos5 {
-  transform: translateY(40rem);
+  top: 80%;
 }
+
 .yPos6 {
-  transform: translateY(50rem);
+  top: 100%;
 }
