--- a/Client/src/components/horseRace/horseSideLeft/horseSideLeft.module.css
+++ b/Client/src/components/horseRace/horseSideLeft/horseSideLeft.module.css
@@ -1,42 +1,41 @@
 .ContainSideLeft {
   display: flex;
-  position: absolute;
   flex-direction: column;
   width: 100%;
-  height: 100vh;
-}
-
-.cardsContainSideLeft {
-  left: 20%;
+  height: 80vh;
   position: absolute;
-  padding: 1rem;
-  width: 50%;
+  left: 0;
+  top: 0;
+  /* align-items: center; */
+  margin-top: 1rem;
 }
 
 .cardsSideLeft {
+  width: 50%;
+  margin-left: 20%;
+  /* margin-bottom: 2rem; */
   border: 3px solid darkgoldenrod;
-  width: 100%;
   border-radius: 13px;
-  padding: 0.5rem;
+  position: absolute;
 }
 
 /* Clases para diferentes posiciones en el eje Y */
 .yPos1 {
-  transform: translateY(0rem);
+  top: 0%;
 }
 
 .yPos2 {
-  transform: translateY(1rem);
+  top: 20%;
 }
 
 .yPos3 {
-  transform: translateY(2rem);
+  top: 40%;
 }
 
 .yPos4 {
-  transform: translateY(3rem);
+  top: 60%;
 }
 
 .yPos5 {
-  transform: translateY(4rem);
+  top: 80%;
 }
