--- a/Client/src/components/horseRace/cards/cardsHorse.module.css
+++ b/Client/src/components/horseRace/cards/cardsHorse.module.css
@@ -3,6 +3,7 @@
   width: 70px;
   display: flex;
   align-items: center;
+  justify-content: center;
   background: linear-gradient(135deg, #f5f5f5, #e0e0e0);
   border-radius: 10px;
   box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px,
@@ -44,3 +45,10 @@
   left: 50%;
   transform: translate(-50%, -50%);
 }
+
+.cardImageBack{
+  width: 70px;
+  height: 120px;
+  /* position: absolute; */
+}
+
