--- a/Client/src/components/horseRace/betHorse/betHorse.module.css
+++ b/Client/src/components/horseRace/betHorse/betHorse.module.css
@@ -6,6 +6,96 @@
   font-size: 2rem;
 }
 
+
+.checkbox_wrapper_24 {
+  display: flex;
+  justify-content: center;
+  gap:25px
+}
+
+.checkbox_wrapper_24 input[type="checkbox"] {
+  display: none;
+
+}
+
+.checkbox_wrapper_24 label {
+  display: inline-flex;
+  align-items: center;
+  cursor: pointer;
+}
+
+.checkbox_wrapper_24 label span {
+  display: inline-block;
+  width: 25px;
+  height: 25px;
+  border: 2px solid #333;
+  border-radius: 50%;
+  margin-right: 10px;
+  transition: background-color 150ms 200ms, transform 350ms cubic-bezier(0.78, -1.22, 0.17, 1.89);
+  position: relative;
+}
+
+.checkbox_wrapper_24 label span:before,
+.checkbox_wrapper_24 label span:after {
+  content: "";
+  position: absolute;
+  height: 2px;
+  background: #333;
+  border-radius: 2px;
+  transition: width 50ms ease;
+  transform-origin: 0% 0%;
+}
+
+.checkbox_wrapper_24 label span:before {
+  top: 13px;
+  left: 9px;
+  transform: rotate(45deg);
+}
+
+.checkbox_wrapper_24 label span:after {
+  top: 16px;
+  left: 10px;
+  transform: rotate(305deg);
+}
+
+.checkbox_wrapper_24 input[type="checkbox"]:checked + label span {
+  background-color: #333;
+  transform: scale(1.25);
+}
+
+.checkbox_wrapper_24 input[type="checkbox"]:checked + label span:before,
+.checkbox_wrapper_24 input[type="checkbox"]:checked + label span:after {
+  background: #fff;
+}
+
+.checkbox_wrapper_24 input[type="checkbox"]:checked + label span:before {
+  width: 5px;
+  transition: width 150ms ease 100ms;
+}
+
+.checkbox_wrapper_24 input[type="checkbox"]:checked + label span:after {
+  width: 10px;
+  transition: width 150ms ease 100ms;
+}
+
+.checkbox_wrapper_24 label:hover span:before,
+.checkbox_wrapper_24 label:hover span:after {
+  width: 10px;
+}
+
+.checkbox_wrapper_24 input[type="checkbox"]:checked + label:hover span {
+  background-color: #333;
+  transform: scale(1.25);
+}
+
+.checkbox_wrapper_24 input[type="checkbox"]:checked + label:hover span:before,
+.checkbox_wrapper_24 input[type="checkbox"]:checked + label:hover span:after {
+  width: 5px;
+  background: #fff;
+  transition: width 150ms ease 100ms;
+}
+
+
 .containCards {
   display: flex;
   gap: 25px;
