--- a/Client/src/components/horseRace/betHorse/betHorse.module.css
+++ b/Client/src/components/horseRace/betHorse/betHorse.module.css
@@ -6,16 +6,24 @@
   font-size: 2rem;
 }
 
+.title{
+color: white;
+margin: 0;
+}
+
+.contain p{
+  margin: 0;
+}
 
 .checkbox_wrapper_24 {
   display: flex;
   justify-content: center;
-  gap:25px
+  gap: 25px;
+  padding: 1rem;
 }
 
 .checkbox_wrapper_24 input[type="checkbox"] {
   display: none;
-
 }
 
 .checkbox_wrapper_24 label {
@@ -28,71 +36,25 @@
   display: inline-block;
   width: 25px;
   height: 25px;
-  border: 2px solid #333;
+  border: 2px solid black;
   border-radius: 50%;
   margin-right: 10px;
   transition: background-color 150ms 200ms, transform 350ms cubic-bezier(0.78, -1.22, 0.17, 1.89);
   position: relative;
-}
-
-.checkbox_wrapper_24 label span:before,
-.checkbox_wrapper_24 label span:after {
-  content: "";
-  position: absolute;
-  height: 2px;
-  background: #333;
-  border-radius: 2px;
-  transition: width 50ms ease;
-  transform-origin: 0% 0%;
-}
-
-.checkbox_wrapper_24 label span:before {
-  top: 13px;
-  left: 9px;
-  transform: rotate(45deg);
-}
-
-.checkbox_wrapper_24 label span:after {
-  top: 16px;
-  left: 10px;
-  transform: rotate(305deg);
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .checkbox_wrapper_24 input[type="checkbox"]:checked + label span {
-  background-color: #333;
+  background-color: #669bbc;
   transform: scale(1.25);
 }
 
-.checkbox_wrapper_24 input[type="checkbox"]:checked + label span:before,
-.checkbox_wrapper_24 input[type="checkbox"]:checked + label span:after {
-  background: #fff;
-}
-
-.checkbox_wrapper_24 input[type="checkbox"]:checked + label span:before {
-  width: 5px;
-  transition: width 150ms ease 100ms;
-}
-
-.checkbox_wrapper_24 input[type="checkbox"]:checked + label span:after {
-  width: 10px;
-  transition: width 150ms ease 100ms;
-}
-
-.checkbox_wrapper_24 label:hover span:before,
-.checkbox_wrapper_24 label:hover span:after {
-  width: 10px;
-}
-
-.checkbox_wrapper_24 input[type="checkbox"]:checked + label:hover span {
-  background-color: #333;
-  transform: scale(1.25);
-}
-
-.checkbox_wrapper_24 input[type="checkbox"]:checked + label:hover span:before,
-.checkbox_wrapper_24 input[type="checkbox"]:checked + label:hover span:after {
-  width: 5px;
-  background: #fff;
-  transition: width 150ms ease 100ms;
+.checkbox_wrapper_24 label span svg {
+  width: 15px; /* Adjust size as needed */
+  height: 15px; /* Adjust size as needed */
+  stroke: white; /* Change color if needed */
 }
 
 
@@ -109,7 +71,7 @@
 .selectedCard {
   transform: scale(1.1);
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
-  border: 3px solid brown;
+  border: 3px solid #669bbc;;
   padding: 0.5rem;
   border-radius: 10px;
 }
