--- a/Client/src/components/horseRace/cards/cardsHorse.module.css
+++ b/Client/src/components/horseRace/cards/cardsHorse.module.css
@@ -46,9 +46,41 @@
   transform: translate(-50%, -50%);
 }
 
-.cardImageBack{
+.cardImageBack {
   width: 70px;
   height: 120px;
   /* position: absolute; */
 }
 
+/* cartas Normales */
+
+/* cartas de caballos */
+
+.spanishDeckHorse {
+  height: 120px;
+  width: 70px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: linear-gradient(135deg, #f5f5f5, #e0e0e0);
+  border-radius: 10px;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px,
+    rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+  position: relative;
+}
+
+.spanishDeckHorse:hover {
+  transform: scale(1.05);
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px,
+    rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
+}
+
+.cardImageHorse {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  transform: translate(-50%, -50%);
+  border-radius: 10px;
+  z-index: 0;
+}
