--- a/Client/src/components/horseRace/betHorse/betHorse.module.css
+++ b/Client/src/components/horseRace/betHorse/betHorse.module.css
@@ -4,14 +4,15 @@
   border-radius: 10px;
   z-index: 2;
   font-size: 2rem;
+  border: 3px solid black;
 }
 
-.title{
-color: white;
-margin: 0;
+.title {
+  color: white;
+  margin: 0;
 }
 
-.contain p{
+.contain p {
   margin: 0;
 }
 
@@ -39,7 +40,8 @@ margin: 0;
   border: 2px solid black;
   border-radius: 50%;
   margin-right: 10px;
-  transition: background-color 150ms 200ms, transform 350ms cubic-bezier(0.78, -1.22, 0.17, 1.89);
+  transition: background-color 150ms 200ms,
+    transform 350ms cubic-bezier(0.78, -1.22, 0.17, 1.89);
   position: relative;
   display: flex;
   justify-content: center;
@@ -57,7 +59,6 @@ margin: 0;
   stroke: white; /* Change color if needed */
 }
 
-
 .containCards {
   display: flex;
   gap: 25px;
@@ -71,13 +72,12 @@ margin: 0;
 .selectedCard {
   transform: scale(1.1);
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
-  border: 3px solid #669bbc;;
+  border: 3px solid #669bbc;
   padding: 0.5rem;
   border-radius: 10px;
 }
 
 .buttonDiv {
-  /* background-color: red; */
   margin-top: 1rem;
 }
 
