--- a/Client/src/components/horseRace/cards/cardsHorse.module.css
+++ b/Client/src/components/horseRace/cards/cardsHorse.module.css
@@ -49,7 +49,6 @@
 .cardImageBack {
   width: 70px;
   height: 120px;
-  /* position: absolute; */
 }
 
 /* cartas Normales */
@@ -58,7 +57,7 @@
 
 .spanishDeckHorse {
   height: 120px;
-  width: 70px;
+  width: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
