--- a/Client/src/pages/BerenjenaGame/Berenjena/berenjena.module.css
+++ b/Client/src/pages/BerenjenaGame/Berenjena/berenjena.module.css
@@ -10,7 +10,7 @@
   justify-content: center;
   align-items: center;
   font-family: "Bebas Neue", sans-serif;
-  background-image: url("../../../../src/assets/fondoo.png");
+  background-image: url("../../../../src/assets/global/fondoo.png");
   background-repeat: no-repeat;
   background-size: cover;
   position: relative;
