--- a/Client/src/pages/store/store.module.css
+++ b/Client/src/pages/store/store.module.css
@@ -6,7 +6,7 @@
   flex-direction: column;
   align-items: center;
   font-family: "Bebas Neue", sans-serif;
-  background-image: url("../../../src/assets/fondoo.png");
+  background-image: url("../../../src/assets/global/fondoo.png");
   background-repeat: no-repeat;
   background-size: cover;
   position: relative;
