--- a/Client/src/pages/Home/home.module.css
+++ b/Client/src/pages/Home/home.module.css
@@ -1,8 +1,9 @@
-
-
 .contain {
   width: 100%;
-  height: 100vh;
+  height: 100%;
+  top: 0;
+  left: 0;
+  position: absolute;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -122,7 +123,7 @@
 @media only screen and (max-width: 480px) {
   .containOption {
     width: 100%;
-    margin-top: 1rem;
+    margin-top: 5rem;
   }
 
   .containOption h1 {
