--- a/Client/src/components/homePage/login/login.module.css
+++ b/Client/src/components/homePage/login/login.module.css
@@ -82,3 +82,7 @@ input {
   background-color: rgb(38, 117, 2);
   box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
 }
+
+.error{
+color: red;
+}
