--- a/Client/src/pages/store/store.module.css
+++ b/Client/src/pages/store/store.module.css
@@ -1,6 +1,5 @@
 .contain {
   width: 100%;
-  padding: 0;
   margin: 0;
   display: flex;
   flex-direction: column;
@@ -31,6 +30,7 @@
   flex-wrap: wrap;
   justify-content: center;
   gap: 25px;
+  padding-block: 5%;
 }
 
 .titleCard {
@@ -39,7 +39,7 @@
 
 .cardProduct {
   font-size: 3rem;
-  width: 400px;
+  width: 25rem;
   backdrop-filter: blur(10px);
   box-shadow: rgba(0, 0, 0, 0.35) 0px -50px 36px -28px inset;
   border-radius: 10px;
@@ -162,4 +162,18 @@
 .cardProduct button:disabled {
   background-color: rgba(255, 0, 0, 0.596);
   transition: 1s;
+}
+
+@media only screen and (max-width: 970px) {
+  .MapProducts {
+    padding-block: 15%;
+  }
+  .cardProduct {
+    font-size: 3rem;
+    width: 90%;
+    backdrop-filter: blur(10px);
+    box-shadow: rgba(0, 0, 0, 0.35) 0px -50px 36px -28px inset;
+    border-radius: 10px;
+    border: 3px solid black;
+  }
 }
