--- a/Client/src/components/homePage/sesionLogged/sesionLogged.module.css
+++ b/Client/src/components/homePage/sesionLogged/sesionLogged.module.css
@@ -69,3 +69,15 @@
     height: 40px;
     border-radius: 50%;
   }
+
+  .moneyicon{
+    display: flex;
+    align-items: center;
+    padding-left: 0.5rem;
+
+  }
+
+  .moneyicon p{
+    font-size: 1.5rem;
+    margin: 0;
+  }
