--- a/Client/src/pages/store/store.module.css
+++ b/Client/src/pages/store/store.module.css
@@ -38,6 +38,7 @@
 }
 
 .cardProduct {
+  position: relative; /* Necesario para la cinta diagonal */
   font-size: 3rem;
   width: 25rem;
   backdrop-filter: blur(10px);
@@ -141,7 +142,7 @@
 }
 
 .NecesaryValue {
-  color: white; /* Cambia este color al que desees */
+  color: white;
 }
 
 .cardProduct button {
@@ -154,6 +155,7 @@
   font-weight: 600;
   transition: 1s;
 }
+
 .cardProduct button:hover {
   background-color: white;
   transition: 1s;
@@ -162,6 +164,33 @@
 .cardProduct button:disabled {
   background-color: rgba(255, 0, 0, 0.596);
   transition: 1s;
+}
+
+/* Cinta diagonal para "Canjeado" */
+.ribbon {
+  width: 150px;
+  height: 150px;
+  overflow: hidden;
+  position: absolute;
+  top: 0px;
+  right: 0px;
+}
+
+.ribbon span {
+  position: absolute;
+  display: block;
+  width: 225px;
+  padding: 15px 0;
+  background-color: #c0392b;
+  color: white;
+  font-size: 1.2rem;
+  font-weight: bold;
+  text-align: center;
+  text-transform: uppercase;
+  transform: rotate(45deg);
+  top: 30px;
+  right: -50px;
+  box-shadow: 0 3px 10px rgba(0, 0, 0, 0.3);
 }
 
 @media only screen and (max-width: 970px) {
